chore: change data for the glass replacement calculator.

--- a/public/assets/css/entitieslist.css
+++ b/public/assets/css/entitieslist.css
@@ -184,6 +184,14 @@
   border-radius: 20px !important;
 }
 
+.snap-inline {
+  scroll-snap-type: inline mandatory;
+}
+
+.snap-inline > * {
+  scroll-snap-align: start;
+}
+
 /*to ensure that when anchor tag with ID href is click to scroll to that target
 it will not be covered by top nav*/
 [id] {
@@ -372,10 +380,11 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
     overflow: visible;
   }
 
-  .navbar-toggle.panel-content ~ .page-wrapper > .left-nav-bar.left-nav-collapse {
+  .navbar-toggle.panel-content
+    ~ .page-wrapper
+    > .left-nav-bar.left-nav-collapse {
     overflow: hidden;
   }
-
 
   .navbar-toggle.panel-content
     ~ .page-wrapper
@@ -2721,11 +2730,14 @@ div.gslide-media.gslide-inline {
   align-content: center;
 }
 
-
 .calculator-article > .calculator-container {
   padding: 1rem;
   border-radius: 8px;
   margin: 0 auto;
+}
+
+.calculator-article > .calculator-container .table-wrapper {
+  overscroll-behavior: contain;
 }
 
 .calculator-article > .calculator-container h6 {
@@ -2735,8 +2747,7 @@ div.gslide-media.gslide-inline {
 }
 
 .calculator-article > .calculator-container .input-section {
-  margin: 0;
-  margin-bottom: 12px; /* Reduced margin for compactness */
+  margin: 0 0 12px;
   border: none;
 }
 
@@ -2745,6 +2756,7 @@ div.gslide-media.gslide-inline {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  gap: 1rem;
 }
 
 .calculator-article > .calculator-container .non-table-input-wrapper > * {
@@ -2754,9 +2766,6 @@ div.gslide-media.gslide-inline {
 .calculator-article > .calculator-container label {
   display: block;
   margin-bottom: 0.4rem;
-  /* color: #444; */
-
-  /* background-color: #f2f2f2; */
   color: rgba(var(--falcon-gray-900-rgb));
   font-size: 1rem;
   font-weight: 700;
@@ -2782,13 +2791,12 @@ div.gslide-media.gslide-inline {
 }
 
 .calculator-article > .calculator-container input:read-only {
-  /*background-color: #edf2f9 !important;*/
   border: none;
   box-shadow: none;
   text-align: center;
 }
 
-/* Remove spinners for all browsers */
+/* Remove defaults for all browsers */
 .calculator-article > .calculator-container input[type="number"] {
   -moz-appearance: textfield; /* Firefox */
 }
@@ -2804,8 +2812,7 @@ div.gslide-media.gslide-inline {
   margin: 0;
 }
 
-.calculator-article > .calculator-container input[readonly] {
-  /*background-color: #f0f0f0;*/
+.calculator-article > .calculator-container input.pricePerSqft[readonly] {
   background-color: rgba(
     var(--falcon-emphasis-bg-rgb),
     var(--falcon-bg-opacity)
@@ -2827,7 +2834,6 @@ div.gslide-media.gslide-inline {
   border-collapse: collapse;
   margin-bottom: 0.5rem; /* Reduced margin for compactness */
   min-width: 0; /* Remove minimum width to allow shrinking */
-  /*background-color: #edf2f9;*/
 }
 
 .calculator-article > .calculator-container thead {
@@ -2924,19 +2930,17 @@ div.gslide-media.gslide-inline {
   border-radius: 4px;
 }
 
-@media (max-width: 768px) {
-
+@media (max-width: 991px) {
   .calculator-article > header {
     padding: 0.5rem;
   }
 
   .calculator-article > .calculator-container {
-    max-width: 100dvw;
+    max-width: 768px; /* to enable scrolling on overflow*/
     padding: 0.5rem; /* Reduced padding for compactness */
   }
 
-
-  .calculator-article > .calculator-container h3 {
+  .calculator-article > .calculator-container h6 {
     font-size: 1rem;
   }
 
@@ -2957,19 +2961,19 @@ div.gslide-media.gslide-inline {
   /* Adjust table layout for mobile: shrink to fit without scrolling */
   .calculator-article > .calculator-container table {
     min-width: 0; /* Remove minimum width to shrink completely */
-    width: auto; /* Allow table to shrink to content */
+    width: 100%; /* Allow table to shrink to content */
   }
 
   .calculator-article > .calculator-container th,
   .calculator-article > .calculator-container td {
     font-size: 0.8rem;
     padding: 0.5rem; /* Further reduced padding for compactness */
-    max-width: 5.625rem;
+    /*max-width: 5.625rem;*/
+    max-width: 50%;
   }
 
-  /* Hide Piece # and Price/Sq Ft ($) on mobile */
-  .calculator-article > .calculator-container  th:first-child, .calculator-article > .calculator-container  td:first-child, /* Piece # */
-  .calculator-article > .calculator-container  th:nth-child(5), .calculator-article > .calculator-container  td:nth-child(5) /* Price/Sq Ft ($) */ {
+  /* Hide Piece # and Price/Sq Ft ($),sf,lib on mobile */
+  .calculator-article > .calculator-container .hide-mobile {
     display: none;
   }
 
@@ -2978,46 +2982,80 @@ div.gslide-media.gslide-inline {
     padding-right: 0.125rem; /* Consistent spacing between cells on mobile */
   }
 
-  .calculator-article > .calculator-container th:nth-child(4),
-  .calculator-article > .calculator-container td:nth-child(4) {
+  /* Glass Type (larger for dropdown) */
+  .calculator-article > .calculator-container .glass-type-h,
+  .calculator-article > .calculator-container td.glassType {
     width: 30%;
-    /* width: clamp(180px, 5vw, 280px); */
     min-width: 11.25rem;
     max-width: 17.5rem;
-  } /* Glass Type (larger for dropdown) */
-  .calculator-article > .calculator-container td:nth-child(6) {
-    width: 15%;
-  } /* Installers */
-  .calculator-article > .calculator-container td:nth-child(7) {
-    width: 15%;
-  } /* Install Time */
+  }
+
+  /* Glass Type (larger for dropdown) */
+  .calculator-article
+    > .calculator-container
+    .install-time-h
+    .calculator-article
+    > .calculator-container
+    .installTime {
+    width: 30%;
+    min-width: 11.25rem;
+    max-width: 17.5rem;
+  }
 }
 
-@media (min-width: 769px) {
-
+@media (min-width: 992px) {
   .calculator-article > header {
-    padding: 1rem;
+    padding: 1rem 1.5rem 1rem 1rem;
   }
 
   .calculator-article > .calculator-container {
     max-width: var(--desktop-left-content-width);
   }
 
+  .calculator-article
+    > .calculator-container
+    .table-wrapper::-webkit-scrollbar {
+    height: 0.8em;
+  }
+  .calculator-article
+    > .calculator-container
+    .table-wrapper::-webkit-scrollbar-thumb:hover {
+    cursor: pointer;
+  }
+  .calculator-article > .calculator-container .table-wrapper {
+    scrollbar-width: auto;
+  }
+
   .calculator-article > .calculator-container th,
   .calculator-article > .calculator-container td {
     max-width: 100%;
   }
-  .calculator-article > .calculator-container th:nth-child(4),
-  .calculator-article > .calculator-container td:nth-child(4) {
-    width: 30%;
+  .calculator-article > .calculator-container th.glass-type-h,
+  .calculator-article > .calculator-container td.glassType {
+    width: 100%;
     /* width: clamp(180px, 5vw, 280px); */
-    min-width: 11.25rem;
-    max-width: 17.5rem;
+    min-width: 25ch;
+    max-width: 45ch;
+  } /* Glass Type (larger for dropdown) */
+
+  .calculator-article > .calculator-container th.pricePerSqft-h,
+  .calculator-article > .calculator-container td.pricePerSqft-t {
+    /*width: 30%;*/
+    /* width: clamp(180px, 5vw, 280px); */
+    min-width: 15ch;
+    max-width: 25ch;
   } /* Glass Type (larger for dropdown) */
 
   .calculator-article > .calculator-container .results p {
     margin: 0.5rem 0; /* Reduced margin for compactness */
     font-size: 0.9rem;
+  }
+
+  /* if the panel is on fullscreen*/
+  @container side-panel (min-width: 410px) {
+    .calculator-article > .calculator-container {
+      max-width: 1000px; /* to enable scrolling on overflow*/
+    }
   }
 }
 
@@ -3440,9 +3478,8 @@ nav[aria-label="messages inbox"] .inbox-item .item-subject {
   border-top-left-radius: 8px;
 }
 
-.email-content header.card > .card-body > div:nth-child(2) > div:nth-child(1)  {
+.email-content header.card > .card-body > div:nth-child(2) > div:nth-child(1) {
   padding-top: 0;
-
 }
 
 /*------ chat panel area---------*/
