--- a/public/assets/css/entitieslist.css
+++ b/public/assets/css/entitieslist.css
@@ -3478,6 +3478,13 @@ nav[aria-label="messages inbox"] .inbox-item .item-subject {
   overflow-y: auto;
   border-top-right-radius: 8px;
   border-top-left-radius: 8px;
+  display: grid
+}
+.email-content > * {
+  grid-area: 1/1;
+  height: 0;
+  opacity: 0;
+  visibility: hidden;
 }
 
 .email-content .email-content-header {
