feat: unread/read button feature

--- a/public/assets/css/entitieslist.css
+++ b/public/assets/css/entitieslist.css
@@ -3478,7 +3478,7 @@ nav[aria-label="messages inbox"] .inbox-item .item-subject {
   overflow-y: auto;
   border-top-right-radius: 8px;
   border-top-left-radius: 8px;
-  display: grid
+  display: grid;
 }
 .email-content > * {
   grid-area: 1/1;
@@ -3493,7 +3493,6 @@ nav[aria-label="messages inbox"] .inbox-item .item-subject {
   height: 100%;
 }
 
-
 .email-content
   .email-content-header
   > .card-body
@@ -3502,37 +3501,38 @@ nav[aria-label="messages inbox"] .inbox-item .item-subject {
   padding-top: 0;
 }
 
-
 .email-content .email-content-body {
   overflow-x: clip;
   overflow-y: auto;
   max-height: calc(100dvh - var(--_email-content-header-max-height));
 }
 
-
-.email-content
-.email-content-body
-> .card-body{
+.email-content .email-content-body > .card-body {
   max-width: 50rem;
   margin-right: auto;
   margin-left: auto;
 }
 
-@media (min-width: 992px) {
+.email-inbox-panel button[aria-label="mark as read" i] > .fa-envelope {
+  display: none;
+}
+.email-inbox-panel button[aria-label="mark as unread" i] > .fa-envelope-open {
+  display: none;
+}
 
+@media (min-width: 992px) {
   @container side-panel (max-width: 405px) {
     .email-content
-    .email-content-header
-    > .card-body
-    > div:nth-child(2)
-    > div:nth-child(1) {
+      .email-content-header
+      > .card-body
+      > div:nth-child(2)
+      > div:nth-child(1) {
       display: none !important;
     }
   }
 
-
-  .email-content .email-content-body .card-body > div > div{
-   width: 100%;
+  .email-content .email-content-body .card-body > div > div {
+    width: 100%;
   }
 }
 
